todo with database

--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="bootstrap-4.4.1-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-database.js"></script>
+    <script>
+        var firebaseConfig = {
+          apiKey: "AIzaSyDwTXbEDUeU1Eh306Llg1-fJaF28hIjPDk",
+          authDomain: "dailyplanner-db.firebaseapp.com",
+          databaseURL: "https://dailyplanner-db.firebaseio.com",
+          projectId: "dailyplanner-db",
+          storageBucket: "dailyplanner-db.appspot.com",
+          messagingSenderId: "796018183794",
+          appId: "1:796018183794:web:f1289c00d8a5c834d1bceb",
+          measurementId: "G-RVGHXPMS40"
+        };
+        firebase.initializeApp(firebaseConfig);
+      </script>
 </head>
 <body>
     <nav class="navbar navbar-light bg-light shadow">
